--- a/package.json
+++ b/package.json
@@ -54,6 +54,11 @@
         "lucide-react": "^0.475.0",
         "react": "^19.2.0",
         "react-dom": "^19.2.0",
+        "react-hot-toast": "^2.6.0",
+        "react-inner-image-zoom": "^4.0.1",
+        "react-toastify": "^11.0.5",
+        "sweetalert2": "^11.26.4",
+        "swiper": "^12.0.3",
         "tailwind-merge": "^3.0.1",
         "tailwindcss": "^4.0.0",
         "tw-animate-css": "^1.4.0",
